# redfa

./: Cargo.toml
src/: colls.rs  dfa.rs  lib.rs
